--- a/harmonic-collection/Homepage/orange/index.html
+++ b/harmonic-collection/Homepage/orange/index.html
@@ -4,6 +4,11 @@
     <title>entry-orange</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
+    <style>
+        a{
+            color: #FFF6DC;
+        }
+    </style>
 </head>
 <body>
     
@@ -47,6 +52,9 @@
             <div class="tiger">
                 <img src="images/tiger.jpg" height="190px">
                 Tiger <br> 호랑이 [ho-lang-yi]</div>
+        </div>
+        <div class="nav">
+            <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">back</a>
         </div>
    </section>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/jquery.ScrollMagic.min.js"></script>
