--- a/harmonic-collection/Homepage/red/index.html
+++ b/harmonic-collection/Homepage/red/index.html
@@ -4,6 +4,11 @@
     <title>entry-red</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
+    <style>
+        a{
+            color: rgb(255, 199, 199);
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -57,7 +62,9 @@
     <div class="affection">11. affection 애정 [ae-jeong]</div>
     <div class="fire">12. fire 불 [bool]</div>
 </div>
-<div class="nav">back</div>
+<div class="nav">
+    <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">back</a>
+    </div>
 </div>
 </body>
 </html>
