--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -2,17 +2,25 @@
     <title>homepage</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
-   
+    <style>
+        a{
+            color: black;
+        }
+    </style>
 </head>
 
 <body>
 <div class="container"> 
     <div class="red-box"></div> 
-    <div class="red-text">red</div>
+    <div class="red-text"> 
+        <a href= "https://yeonseochae.github.io/harmonic-collection/Homepage/red/">red</a>
+    </div>
     <div class="red-label">R255 G40 B11</div>
 
     <div class="orange-box"></div>
-    <div class="orange-text">orange</div>
+    <div class="orange-text">
+         <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/orange/">orange</a>
+         </div>
     <div class="orange-label">R255 G115 B11</div>
 
     <div class="brown-box"></div>
