--- a/harmonic-collection/Homepage/brown/index.html
+++ b/harmonic-collection/Homepage/brown/index.html
@@ -4,6 +4,12 @@
     <title>entry-brown</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
+    <style>
+        a{
+            color:beige
+
+        }
+    </style>
     
 </head>
 <body>
@@ -48,6 +54,8 @@
         <img class="wisdom-icon" src="icons/wisdom.png" >
         <div class="wisdom-overlay">wisdom</div>
     </div>
-    <button class="button" id='myBtn' type="button">Go</button>     
+        <div class="button">
+            <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/brown/index2.html">Go</a>
+        </div>
 
 </body>
