--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -24,7 +24,9 @@
     <div class="orange-label">R255 G115 B11</div>
 
     <div class="brown-box"></div>
-    <div class="brown-text">brown</div>
+    <div class="brown-text">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/brown/">brown</a>
+        </div>
     <div class="brown-label">R153 G83 B35</div>
     
     <div class="yellow-box"></div>
