entry brown refinements

--- a/harmonic-collection/Homepage/brown/index.html
+++ b/harmonic-collection/Homepage/brown/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
     <style>
+        /* removing blue color of hyperlink */
         a{
-            color:beige
-
+            color:#6D462B
         }
     </style>
     
@@ -57,5 +57,9 @@
         <div class="button">
             <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/brown/index2.html">Go</a>
         </div>
+
+    <div class="back">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">back</a>
+    </div>
 
 </body>
