--- a/harmonic-collection/Homepage/brown/index2.html
+++ b/harmonic-collection/Homepage/brown/index2.html
@@ -6,9 +6,10 @@
         <link rel="stylesheet" href="style2.css">    
     </head>
     <body>
+        <!-- Word cards with image, word, and korean definition, pronounciation -->
         <div class="words">
             <div class="bear"> 
-                <img src="images/bear.png" height="550px">
+                <img src="images/bear.png" height="500px">
                 Bear <br> 곰 [gom]</div>
             <hr class="h">
             <div class="stability">
