entrybrown back button

--- a/harmonic-collection/Homepage/brown/index2.html
+++ b/harmonic-collection/Homepage/brown/index2.html
@@ -4,6 +4,11 @@
         <title>entry-brown2</title>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="style2.css">    
+        <style>
+            a{
+                color: #6D462B
+            }
+        </style>
     </head>
     <body>
         <!-- Word cards with image, word, and korean definition, pronounciation -->
@@ -56,6 +61,11 @@
                 <img src="images/wisdom.png" height="500px">
                 Wisdom <br> 지혜 [ji-hye]
             </div>
+        <div class="back">
+            <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/brown/index.html">
+                back
+            </a>
+        </div>
         </div>
     </body>
 </html>
