homepage green hyperlink

--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -34,7 +34,9 @@
     <div class="yellow-label">R255 G230 B82</div>
 
     <div class="green-box"></div>
-    <div class="green-text">green</div>
+    <div class="green-text">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/green/">green</a>
+    </div>
     <div class="green-label">R89 G201 B91</div>
 
     <div class="blue-box"></div>
