--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -48,7 +48,9 @@
     <div class="navy-label">R73 G104 B173</div>
 
     <div class="purple-box"></div>
-    <div class="purple-text">purple</div>
+    <div class="purple-text">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/purple/">purple</a>
+    </div>
     <div class="purple-label">R158 G93 B165</div>
 
     <div class="white-box"></div>
