--- a/harmonic-collection/Homepage/red/index.html
+++ b/harmonic-collection/Homepage/red/index.html
@@ -6,65 +6,97 @@
     <link rel="stylesheet" href="style.css">
     <style>
         a{
-            color: rgb(255, 199, 199);
+            color: rgb(255, 142, 142);
+            text-decoration: none;
         }
+        a:hover{
+            color:  rgb(156, 40, 25);
+        }
+        
     </style>
 </head>
 <body>
-<div class="container">
-    <div class="header">red 빨강 [bbal-gang]</div>
-</div>
-<div class="image-grid">
-    <img class="red-img" src="red.jpg">
-        <div class="red-overlay">1. red</div>
-    <img class="anger-img" src="anger.jpg">
-        <div class="anger-overlay">2. anger</div>
-    <img class="apple-img" src="apple.jpg">
-        <div class="apple-overlay">3. apple</div>
-    <img class="love-img" src="love.jpg">
-        <div class="love-overlay">4. love</div>
-    <img class="christmas-img" src="christmas.jpg">
-        <div class="christmas-overlay">5. christmas</div>
-    <img class="tomato-img" src="tomato.gif">
-         <div class="tomato-overlay">6. tomato</div>
-    <img class="danger-img" src="danger.jpg">
-         <div class="danger-overlay">6. danger</div>
-    <img class="strawberry-img" src="strawberry.jpg">
-        <div class="strawberry-overlay">7. strawberry</div>
-    <img class="heat-img" src="heat.jpg">
-        <div class="heat-overlay">8. heat</div>
-    <img class="passion-img" src="passion.gif">
-        <div class="passion-overlay">9. passion</div>
-    <img class="affection-img" src="affection.jpg">
-        <div class="affection-overlay">9. affection</div>
-    <img class="fire-img" src="fire.jpg">
-        <div class="fire-overlay">10. fire</div>
-        </div>
-</div>
-<div class="text-1">
-    <div class="red"> 1. Red 빨강 [bbal-gang]</div>
-    <div class="red-sent">당신의 빨간 드레스가 마음에 듭니다! (I like your red dress!) <br> [Dang-shin-ui bbal-gan dress ga ma-eum-e deub-ni-da]</div>
-    <div class="anger">2. Anger 분노 [boon-no]</div>
-    <div class="anger-sent">언니는 화가 많다. (My sister is full of anger.)<br> [Eon-ni-neun hwa-ga mahn-tah]</div>
-    <div class="apple">3. Apple 사과 [sa-gwa]</div>
-    <div class="apple-sent">그녀는 사과를 세 개 갖고있다. (She has three apples.) <br> [Geu-nyeo-neun sa-gwa-leul sae-gae-got-go-it-da]</div>
-    <div class="love">4. love 사랑 [sa-lang]</div>
-    <div class="love-sent"> 사랑해 (I love you.) <br>[sa-lang-hae]</div>
-    <div class="christmas">5. christmas 성탄절 [seong-tan-jeol]</div>
-    <div class="christmas-sent">크리스마스는 12월 25일 이다. (Christmas is on December 25th.) <br>[Seong-tan-jeol eun sip-yi-weol yi-sip-oh-yil yi-da.]</div>
-
-<div class="text-2">
-    <div class="tomato">6. tomato 토마토 [toh-mah-toh]</div>
-    <div class="danger">7. danger 위험 [wee-hum]</div>
-    <div class="strawberry">8. strawberry 딸기 [ddal-gi]</div>
-    <div class="heat">9. heat 열기 [yeol-gi]</div>
-    <div class="passion">10. passion 열정 [yeol-jeong]</div>
-    <div class="affection">11. affection 애정 [ae-jeong]</div>
-    <div class="fire">12. fire 불 [bool]</div>
-</div>
-<div class="nav">
-    <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">back</a>
+    <div class="header">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/" title="back to the mainpage">red 빨강 [bbal-gang]
+        </a>
     </div>
+    <div class="intro-container">
+        <div class="intro">
+            <h2>Red</h2>
+            <p>The color of passion and energy. A strong and <br>
+                powerful energy that motivates us to take action. Red is ubiquitously <br>
+                used to warn and signal caution and danger.</p>
+        </div>
+    </div>
+<div class="container">
+<div class="word-grid">
+    <div class="word">
+        <img src="red.jpg">
+        <h5>1</h5>
+    </div>
+    <div class="word">
+        <img src="anger.jpg">
+        <h5>2</h5>
+    </div>
+    <div class="word">
+        <img src="apple.jpg">
+        <h5>3</h5>
+    </div>
+    <div class="word">
+        <img src="love.jpg">
+        <h5>4</h5>
+    </div>
+    <div class="word">
+        <img src="christmas.jpg">
+        <h5>5</h5>
+    </div>
+    <div class="word">
+        <img src="tomato.gif">
+        <h5>6</h5>
+    </div>
+    <div class="word">
+        <img src="danger.jpg">
+        <h5>7</h5>
+    </div>
+    <div class="word">
+        <img src="strawberry.jpg">
+        <h5>8</h5>
+    </div>
+    <div class="word">
+        <img src="heat.jpg">
+        <h5>9</h5>
+    </div>
+    <div class="word">
+        <img src="passion.gif">
+        <h5>10</h5>
+    </div>
+    <div class="word">
+        <img src="affection.jpg">
+        <h5>11</h5>
+    </div>
+    <div class="word">
+        <img src="fire.jpg">
+        <h5>12</h5>
+    </div>
+</div>
+</div>
+<div class="definition-container">
+    <div class="definition">
+        <p>1. Strength 힘 [him]</p>
+        <p>2. Anger 분노 [boon-no]</p>
+        <p>3. Apple 사과 [sa-gwa]</p>
+        <p>4. Love 사랑 [sa-lang]</p>
+        <p>5. Christmas 성탄절 [seong-tan-jeol]</p>
+        <p>6. Tomato 토마토 [toh-mah-toh]</p>
+        <p>7. Danger 위험 [wi-heom]</p>
+        <p>8. Strawberry 딸기 [ddal-gi]</p>
+        <p> 9. Heat 열기 [yeol-gi]</p>
+        <p> 10. Passion 열정 [yeol-jeong]</p>
+        <p>11. Affection 애정 [ae-jeong]</p>
+        <p> 12. Fire 불 [bool]</p>
+    </div>
+</div>
+
 </div>
 </body>
 </html>
