homepage black link

--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -58,6 +58,8 @@
     <div class="white-label">R255 G255 B255</div>
 
     <div class="black-box"></div>
-    <div class="black-text">black</div>
+    <div class="black-text">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/black/">black</a>
+    </div>
     <div class="black-label">R0 G0 B0</div>
 </div>
