--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -6,6 +6,9 @@
         a{
             color: black;
         }
+        .black-text a{
+            color: white;
+        }
     </style>
 </head>
 
