--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -47,7 +47,9 @@
     <div class="blue-label">R62 G155 B219</div>
 
     <div class="navy-box"></div>
-    <div class="navy-text">navy</div>
+    <div class="navy-text">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/navy/">navy</a>
+    </div>
     <div class="navy-label">R73 G104 B173</div>
 
     <div class="purple-box"></div>
