navy entry star hyperlink

--- a/harmonic-collection/Homepage/navy/index.html
+++ b/harmonic-collection/Homepage/navy/index.html
@@ -24,8 +24,12 @@
         <div class="star-container">
             <div class="star">
                 <img src="icons/SVG/star4.svg">
-                <img src="icons/SVG/star2.svg">
-                <img src="icons/SVG/star1.svg">
+                <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/navy/description">
+                    <img src="icons/SVG/star2.svg">
+                </a>
+                <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/navy/words">
+                    <img src="icons/SVG/star1.svg">
+                </a>
                 <img src="icons/SVG/star3.svg">
                 <img src="icons/SVG/star5.svg">
             </div>
