star hover added

--- a/harmonic-collection/Homepage/navy/description.html
+++ b/harmonic-collection/Homepage/navy/description.html
@@ -10,7 +10,11 @@
     </head>
     <body>
         <div class="back">
-            <img src="icons/SVG/star2.svg">
+            <div class="star">
+                <a href="file:///Users/yeonseochae/Documents/yeonseochae.github.io/harmonic-collection/Homepage/navy/index.html">
+                    <img src="icons/SVG/star2.svg">
+                </a>
+            </div>
         </div>
         <div class="description">
             <h5>Navy</h5>
