--- a/harmonic-collection/Homepage/navy/index.html
+++ b/harmonic-collection/Homepage/navy/index.html
@@ -22,15 +22,23 @@
         </div>
 
         <div class="star-container">
-            <div class="star">
+            <div class="star-1">
                 <img src="icons/SVG/star4.svg">
+            </div>
+            <div class="star-2">
                 <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/navy/description">
                     <img src="icons/SVG/star2.svg">
                 </a>
-                <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/navy/words">
+            </div>
+            <div class="star-3">
+                <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/navy/words" title="">
                     <img src="icons/SVG/star1.svg">
                 </a>
+            </div>
+            <div class="star-4">
                 <img src="icons/SVG/star3.svg">
+            </div>
+            <div class="star-5">
                 <img src="icons/SVG/star5.svg">
             </div>
         </div>
@@ -38,7 +46,6 @@
         <div class="intro">
             <p>Click on the stars</p>
         </div>
-       
         
     </body>
 </html>
