--- a/harmonic-collection/Homepage/navy/words.html
+++ b/harmonic-collection/Homepage/navy/words.html
@@ -8,8 +8,13 @@
     </head>
     <body>
         <div class="back">
-            <img src="icons/SVG/star1.svg">
+            <div class="star">
+                <a href="file:///Users/yeonseochae/Documents/yeonseochae.github.io/harmonic-collection/Homepage/navy/index.html">
+                    <img src="icons/SVG/star1.svg">
+                </a>
+            </div>
         </div>
+
         <div class="container">
             <div class="word-grid">
                 <div class="word">
