star hyperlink update

--- a/harmonic-collection/Homepage/navy/description.html
+++ b/harmonic-collection/Homepage/navy/description.html
@@ -11,7 +11,7 @@
     <body>
         <div class="back">
             <div class="star">
-                <a href="file:///Users/yeonseochae/Documents/yeonseochae.github.io/harmonic-collection/Homepage/navy/index.html">
+                <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/navy/">
                     <img src="icons/SVG/star2.svg">
                 </a>
             </div>
