--- a/harmonic-collection/Homepage/navy/words.html
+++ b/harmonic-collection/Homepage/navy/words.html
@@ -9,7 +9,7 @@
     <body>
         <div class="back">
             <div class="star">
-                <a href="file:///Users/yeonseochae/Documents/yeonseochae.github.io/harmonic-collection/Homepage/navy/index.html">
+                <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/navy/">
                     <img src="icons/SVG/star1.svg">
                 </a>
             </div>
