black notes upload

--- a/harmonic-collection/Homepage/black/index.html
+++ b/harmonic-collection/Homepage/black/index.html
@@ -23,20 +23,20 @@
         <div class="title">
             <h2>Black</h2>
         </div>
-
+<!-- Information about pronounciating black in Korean -->
         <div class="info">
             <p>Black can be said in two different ways:</p>
             <h5>[geom-jeong] / [gga-mang]</h5>
 
         </div>
-
+<!-- Color introduction -->
         <div class="intro">
             <p>The color of power and sophistication. Black is an incredibly strong <br>
                 and intimidating color that exudes authority and makes us feel secure <br>
                 and protected. Often seen at formal and prestigious events.</p>
 
         </div>
-
+<!-- List of words, definitions, and iamges -->
         <div class="word-grid">
             <div class="whale">
                 <img src="images/whale.jpg" alt="Whale jumping out of water">
