homepage blue hyperlink

--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -43,7 +43,9 @@
     <div class="green-label">R89 G201 B91</div>
 
     <div class="blue-box"></div>
-    <div class="blue-text">blue</div>
+    <div class="blue-text">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/blue/">blue</a>
+    </div>
     <div class="blue-label">R62 G155 B219</div>
 
     <div class="navy-box"></div>
