hyperlink color change

--- a/harmonic-collection/Homepage/yellow/index.html
+++ b/harmonic-collection/Homepage/yellow/index.html
@@ -7,11 +7,11 @@
         
         <style>
              a{
-            color: #ce9115;
+            color: #a0701c;
             text-decoration: none;
             }
             a:hover{
-            color: #ffe8b0;
+            color: #ffe7b8;
             }
         </style>
     </head>
