homepage yellow hyperlink

--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -33,7 +33,9 @@
     <div class="brown-label">R153 G83 B35</div>
     
     <div class="yellow-box"></div>
-    <div class="yellow-text">yellow</div>
+    <div class="yellow-text">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/yellow/">yellow</a>
+    </div>
     <div class="yellow-label">R255 G230 B82</div>
 
     <div class="green-box"></div>
