entry blue words- korean update

--- a/harmonic-collection/Homepage/blue/index.html
+++ b/harmonic-collection/Homepage/blue/index.html
@@ -41,47 +41,47 @@
             <div class="sky">
                 <img src="images/sky.jpg">
                 <p>Sky</p>
-                하늘
+                하늘 [ha-neul]
             </div>
             <div class="security">
                 <img src="images/security.jpg">
                 <p>Security</p>
-                보안
+                보안 [bo-an]
             </div>
             <div class="intelligence">
                 <img src="images/intelligence.jpg">
                 <p>Intelligence</p>
-                지능
+                지능 [ji-neung]
             </div>
             <div class="dolphin">
                 <img src="images/dolphin.jpg">
                 <p>Dolphin</p>
-                돌고래
+                돌고래 [dol-go-rae]
             </div>
             <div class="cleaning">
                 <img src="images/cleaning.jpg">
                 <p>Cleaning</p>
-                청소
+                청소 [cheong-so]
             </div>
             <div class="winter">
                 <img src="images/winter.jpg">
-                <p>Winter</p>
-                겨울
+                <p>Cold</p>
+                겨울 [gyo-wool]
             </div>
             <div class="sadness">
                 <img src="images/sadness.jpg">
                 <p>Sadness</p>
-                슬픔
+                슬픔 [seul-peum]
             </div>
             <div class="loyalty">
                 <img src="images/loyalty.jpg">
                 <p>Loyalty</p>
-                충성심
+                충성심 [choong-seong-shim]
             </div>
             <div class="glacier">
                 <img src="images/glacier.jpg">
                 <p>Glacier</p>
-                빙하
+                빙하 [bing-ha]
             </div>
         </div>
         
