homepage white hyperlink

--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -63,7 +63,9 @@
     <div class="purple-label">R158 G93 B165</div>
 
     <div class="white-box"></div>
-    <div class="white-text">white</div>
+    <div class="white-text">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/white/">white</a>
+    </div>
     <div class="white-label">R255 G255 B255</div>
 
     <div class="black-box"></div>
