homepage hyperlink color update

--- a/harmonic-collection/Homepage/index.html
+++ b/harmonic-collection/Homepage/index.html
@@ -8,9 +8,37 @@
             a{
                 color: black;
             }
+            .red a{
+                color: #60140f;
+            }
+            .orange a{
+                color: #632807;
+            }
+            .brown a{
+                color: #301503;
+            }
+            .yellow a{
+                color: #664f07;
+            }
+            .green a{
+                color: #114211;
+            }
+            .blue a{
+                color: #0c3c51;
+            }
+            .navy a{
+                color: #0c2242;
+            }
+            .purple a{
+                color: #360a3f;
+            }
+            .white a{
+                color: #4c4b4c;
+            }
             .black a{
                 color: white;
             }
+            
         </style>
     </head>
 
