--- a/harmonic-collection/Homepage/red/index.html
+++ b/harmonic-collection/Homepage/red/index.html
@@ -79,22 +79,59 @@
     </div>
 </div>
 </div>
-<div class="definition-container">
-    <div class="definition">
-        <p>1. Strength 힘 [him]</p>
-        <p>2. Anger 분노 [boon-no]</p>
-        <p>3. Apple 사과 [sa-gwa]</p>
-        <p>4. Love 사랑 [sa-lang]</p>
-        <p>5. Christmas 성탄절 [seong-tan-jeol]</p>
-        <p>6. Tomato 토마토 [toh-mah-toh]</p>
-        <p>7. Danger 위험 [wi-heom]</p>
-        <p>8. Strawberry 딸기 [ddal-gi]</p>
-        <p> 9. Heat 열기 [yeol-gi]</p>
-        <p> 10. Passion 열정 [yeol-jeong]</p>
-        <p>11. Affection 애정 [ae-jeong]</p>
-        <p> 12. Fire 불 [bool]</p>
+<div class="grid-container">
+    <div class="grid">
+        <div class="words">
+            <h3>1. Strength</h3>
+            힘 [him]
+        </div> 
+        <div class="words">
+            <h3>2.anger </h3>
+            힘 [him]
+        </div> 
+        <div class="words">
+            <h3>3.apple </h3>
+            사과 [sa-gwa]
+        </div> 
+        <div class="words">
+            <h3>4. love</h3>
+            사랑 [sa-rang]
+        </div> 
+        <div class="words">
+            <h3>5. christmas </h3>
+            성탄절 [seong-tan-jeol]
+        </div> 
+        <div class="words">
+            <h3>6. tomato </h3>
+            토마토 [toh-mah-toh]
+        </div> 
+        <div class="words">
+            <h3>7. danger</h3>
+            위험 [wi-heom]
+        </div> 
+        <div class="words">
+            <h3>8. strawberry </h3>
+            딸기 [ddal-gi]
+        </div> 
+        <div class="words">
+            <h3>9. heat </h3>
+            열기 [yeol-gi]
+        </div>
+        <div class="words">
+            <h3>10. passion </h3>
+            열정 [yeol-jeong]
+        </div>  
+        <div class="words">
+            <h3>11. affection</h3>
+            애정 [ae-jeong]
+        </div> 
+        <div class="words">
+            <h3>12. fire </h3>
+            불 [bool]
+        </div> 
     </div>
 </div>
+
 
 </div>
 </body>
