entry red responsive

--- a/harmonic-collection/Homepage/red/index.html
+++ b/harmonic-collection/Homepage/red/index.html
@@ -82,7 +82,7 @@
 <div class="grid-container">
     <div class="grid">
         <div class="words">
-            <h3>1. Strength</h3>
+            <h3>1. strength</h3>
             힘 [him]
         </div> 
         <div class="words">
