entry purple responsive

--- a/harmonic-collection/Homepage/purple/index.html
+++ b/harmonic-collection/Homepage/purple/index.html
@@ -10,12 +10,19 @@
     <style>
        a{
         color: #cc87d6;
+        text-decoration: none;
+       }
+       a:hover{
+        color: #7c52ff;
        }
     </style>
     
 </head>
 <div class="header">
-    <div class="header-text">purple 보라 [bo-ra]</div>
+    <div class="header-text">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">
+        purple 보라 [bo-ra]
+        </a> </div>
 </div>
 <div class="intro">
     <p> Flip the Cards!</p>
@@ -157,7 +164,4 @@
             <p>나비 [na-bi]</p>
         </div>
     </div>
-</div>
-<div class="back">
-    <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">back</a>
 </div>
