entry yellow responsive

--- a/harmonic-collection/Homepage/yellow/index.html
+++ b/harmonic-collection/Homepage/yellow/index.html
@@ -49,9 +49,9 @@
                     Yellow
                 </div>
                 <div class="intro-text">
-                    The color of happiness and optimism. Yellow is a cheerful and energetic color that
-                    brings fun <br>and joy to the world. It inspires thought and curiosity and boosts 
-                    enthusiasm and confidence.
+                        The color of happiness and optimism. Yellow is a cheerful and energetic color that
+                    brings fun and joy to the world. It inspires thought and curiosity and boosts 
+                    enthusiasm and confidence.                
                 </div>
             </div>
 
