--- a/harmonic-collection/Homepage/white/index.html
+++ b/harmonic-collection/Homepage/white/index.html
@@ -63,7 +63,6 @@
                     <img src="images/winter.jpg"> 
                 </div>
                 <div>sleigh= 썰매 [sseol-mae]</div>
-                <div>gloves= 장갑 [jang-gop]</div>
                 <div>겨울에는 장갑 필수.. 난 스키보다 눈썰매가 더 재밌어~</div>
             </div>
 
@@ -133,7 +132,7 @@
                     <img src="images/sculpture.jpg">
                 </div>
                 <div>sculptor 조각가 [jo-gak-ga]</div>
-                <div>조각가분 손에 버터 냄새 한 일주일은 갈 듯</div>
+                <div>버터로 조각을 하다니.. 조각가분 손에 버터 냄새 한 일주일은 갈 듯</div>
             </div>
             <div class="word">
                 <span>10. toilet </span>
