--- a/harmonic-collection/Homepage/green/index.html
+++ b/harmonic-collection/Homepage/green/index.html
@@ -7,11 +7,23 @@
     <style>
         a{
             color: #FFF6DC;
+            text-decoration: none;
         }
+        a:hover{
+         color: #90dda6;
+        }
+        
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">Green 초록 [cho-lok]</div>
+    <div class="header">
+        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">
+            Green 초록 [cho-lok]
+        </a>
+       </div>
 
     <div class="book">
         <div class="cover">
@@ -24,10 +36,10 @@
         <div class="page"></div>
         <div class="last-page">
             <img src="images/green.jpg">
-            <h6>초록 [cho-lok]</h6>
-            <p> The color of harmony and health. <br>
-            Green is a generous, relaxing color that revitalizes our <br>
-            body and mind. It balances our emotions and makes us feel <br>
+            <h3> [cho-lok]</h3>
+            <p> The color of harmony and health. 
+            Green is a generous, relaxing color that revitalizes our 
+            body and mind. It balances our emotions and makes us feel 
             safe and secure. It also gives us hope with promises of growth and prosperity
             And it provides a little bit of luck to help us along the way.</p>
         </div>
@@ -85,9 +97,7 @@
             <h6>safety</h6>
             <p>안전 [an-jeon]</p>
         </div>
-        <div class="back">
-            <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">back</a>
-        </div>
+        
     </div>
    
     </div>
