--- a/harmonic-collection/Homepage/brown/index.html
+++ b/harmonic-collection/Homepage/brown/index.html
@@ -5,16 +5,23 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
     <style>
-        /* removing blue color of hyperlink */
         a{
-            color:#6D462B
+            color:#9b6c4c;
+            text-decoration: none;
+        }
+        a:hover{
+            color: #513414;
         }
     </style>
     
 </head>
 <body>
     <div class="header">
-        <div class="header-text">brown 갈색 [gal-saek]</div>
+        <div class="header-text">
+            <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">
+                brown 갈색 [gal-saek]
+            </a> 
+        </div>
     </div>
 
     <div class="title">Brown</div>
@@ -55,11 +62,8 @@
         <div class="wisdom-overlay">wisdom</div>
     </div>
         <div class="button">
-            <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/brown/index2.html">Go</a>
+            <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/brown/index2.html">Click to see definitions</a>
         </div>
 
-    <div class="back">
-        <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">back</a>
-    </div>
 
 </body>
