--- a/harmonic-collection/Homepage/brown/index2.html
+++ b/harmonic-collection/Homepage/brown/index2.html
@@ -14,21 +14,21 @@
         <!-- Word cards with image, word, and korean definition, pronounciation -->
         <div class="words">
             <div class="bear"> 
-                <img src="images/bear.png" height="500px">
+                <img src="images/bear.png">
                 Bear <br> 곰 [gom]</div>
             <hr class="h">
             <div class="stability">
-                <img src="images/stability.png" height="600px">
+                <img src="images/stability.png" >
                 Stability <br> 안정성 [an-jeong-seong]
             </div>
             <hr class="h">
             <div class="dirt">
-                <img src="images/dirt.png" height="570px">
+                <img src="images/dirt.png" >
                 Dirt <br> 흙 [heulg]
             </div>
             <hr class="h">
             <div class="acorn">
-                <img src="images/acorn.png" height="500px">
+                <img src="images/acorn.png">
                 Acorn <br> 도토리 [do-to-ri]
             </div>
             <hr class="h">
@@ -38,27 +38,27 @@
             </div>
             <hr class="h">
             <div class="boring">
-                <img src="images/boring.png" height="500px">
+                <img src="images/boring.png" >
                 Boring <br> 지루하다 [ji-roo-ha-da]
             </div>
             <hr class="h">
             <div class="log">
-                <img src="images/log.png" height="550px">
+                <img src="images/log.png" >
                 log <br> 통나무 [tong-na-mu]
             </div>
             <hr class="h">
             <div class="squirrel">
-                <img src="images/squirrel.png" height="350px">
+                <img src="images/squirrel.png" >
                 Squirrel <br> 다람쥐 [da-ram-ji]
             </div>
             <hr class="h">
             <div class="potato">
-                <img src="images/potato.png" height="600px">
+                <img src="images/potato.png" >
                 Potato <br> 감자 [gam-ja]
             </div>
             <hr class="h">
             <div class="wisdom">
-                <img src="images/wisdom.png" height="500px">
+                <img src="images/wisdom.png" >
                 Wisdom <br> 지혜 [ji-hye]
             </div>
         <div class="back">
