orange responsive update

--- a/harmonic-collection/Homepage/orange/index.html
+++ b/harmonic-collection/Homepage/orange/index.html
@@ -6,13 +6,21 @@
     <link rel="stylesheet" href="style.css">
     <style>
         a{
-            color: #FFF6DC;
+            color: rgb(121, 34, 0);
+            text-decoration: none;
+        }
+        a:hover{
+            color: rgb(255, 178, 111);
         }
     </style>
 </head>
 <body>
     
-   <div class="title">orange 주황 [ju-hwang]</div>
+   <div class="title">
+    <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/" title="back to home">
+        orange 주황 [ju-hwang]
+    </a>
+   </div>
    <section class="description">
         <div class="description-paragraph">
             <button class="button" id='myBtn' type="button">Click Me!</button> 
