orange cursor update

--- a/harmonic-collection/Homepage/orange/index.html
+++ b/harmonic-collection/Homepage/orange/index.html
@@ -61,12 +61,11 @@
                 <img src="images/tiger.jpg" height="190px">
                 Tiger <br> 호랑이 [ho-lang-yi]</div>
         </div>
-        <div class="nav">
-            <a href="https://yeonseochae.github.io/harmonic-collection/Homepage/">back</a>
-        </div>
+        <!-- customized cursor -->
+        <div id="custom-cursor"></div>
+       
    </section>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/jquery.ScrollMagic.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js"></script>
+   
    <script src="script.js"></script>
    </body>
    </html>
